# Stock-Price-Prediction

./: .gitignore  README.md  TIMELINE.md  advisor.py  alpha_pulse.py  api_server.py  api_services.py  asgi.py  backtest.py  best_lstm_model.pth  bot.py  bs_1000_companies.csv  bs_1000_full_text.txt  confidence.py  config.py  data_fetcher.py  exchanges.py  explainability.py  inference.py  live_feed.py  lstm_stock_prediction.ipynb  market_data.py  metrics.py  model.py  pyproject.toml  requirements.txt  run_project.ps1  run_project.sh  scalers.pkl  screener.py  sentiment.py  start_dashboard_background.ps1  train.py  vercel.json
.claude/: launch.json
api/: app.py
cache/: 10IIFL28A-NE_NS_7f34a1d5552b.csv  5PAISA_NS_08117b2bc2f9.csv  5PAISA_NS_27e666c1e6f0.csv  AMZN_b240a3bc782d.csv  BHARTIARTL_NS_09a2d4725ce5.csv  HDFCBANK_NS_48a20d7269b0.csv  ICICIBANK_NS_03f8c6acebb8.csv  ICICIBANK_NS_4aea6e236123.csv  ICICIBANK_NS_5566cf4e381f.csv  INFY_NS_f5eaa69f6388.csv  KOTAKBANK_NS_c36f66b9c56c.csv  KOTAKBANK_NS_dbd413797328.csv  MIDCAP_NS_4708161cccc9.csv  MSFT_47224d294f13.csv  NVDA_a56b38d8e139.csv  RELIANCE_NS_03630560ee28.csv  RELIANCE_NS_b65a49d17615.csv  RELIANCE_NS_c46065bf78c8.csv  SUNPHARMA_NS_6aedc80136f2.csv  TATACAP_NS_054eaefb2ce8.csv  TCS_NS_e0715b1aafe0.csv  TCS_NS_f30995afc227.csv  TSLA_9b6b04797687.csv  TTML_BO_75431eab71e2.csv  TTML_NS_2ebba6890143.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  (+2 more)
results/: backtest_RELIANCE_NS.csv  backtest_TCS_NS.csv  equity_RELIANCE_NS.csv  predictions_RELIANCE_NS.csv  trades_RELIANCE_NS.csv
(+688 files in other folders)
